# mir-retrodoc

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  RELEASE-NOTES.md  ROADMAP.md  mir-preservation
docs/: 00-project-scope.md  demo.md  (+14 more)
experiment/mirc0/: Cargo.toml  README.md
experiment/mirc0/docs/: 00-overview.md  01-c-backend-model.md  02-runtime-support.md  03-differential-testing.md  04-non-goals.md
experiment/mirc0/src/: c_emit.rs  compile.rs  compile_lowered.rs  error.rs  lib.rs  pretty.rs  runtime_c.rs
experiment/mirc0/tests/: compare_with_mirsem.rs  compile_lowered.rs  emit_valid.rs
experiment/mirjit/: Cargo.toml
experiment/mirjit/src/: context.rs  lib.rs  thunk.rs
experiment/mirjit/tests/: jit_execution.rs
experiment/mirrv32/: Cargo.toml
experiment/mirrv32/src/: allocator.rs  codegen.rs  lib.rs  register.rs
experiment/mirrv32/tests/: assembly_generation.rs  rv32i_execution.rs
experiment/mirtool/: .gitignore  Cargo.toml  README.md
experiment/mirtool/docs/: 00-overview.md  01-commands.md  02-pipeline.md
experiment/mirtool/growth_fixtures/: arithmetic_128.mircap.txt  arithmetic_16.mircap.txt  arithmetic_32.mircap.txt  arithmetic_64.mircap.txt  arithmetic_8.mircap.txt  branch_heavy_128.mircap.txt  branch_heavy_16.mircap.txt  branch_heavy_32.mircap.txt  branch_heavy_64.mircap.txt  branch_heavy_8.mircap.txt  direct_call_128.mircap.txt  direct_call_16.mircap.txt  direct_call_32.mircap.txt  direct_call_64.mircap.txt  direct_call_8.mircap.txt  memory_loop_128.mircap.txt  memory_loop_16.mircap.txt  memory_loop_32.mircap.txt  memory_loop_64.mircap.txt
experiment/mirtool/src/: commands.rs  error.rs  io.rs  main.rs
experiment/mirtool/tests/: cli_smoke.rs
(+141 files in other folders)
