[package]
name = "mirc0"
version = "0.1.0"
edition = "2021"
description = "Baseline compiler from MIR-F0 ModuleImage to simple portable C"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
mircap = { path = "../mircap" }
mirplan = { path = "../mirplan" }
mirspace = { path = "../mirspace" }

[dev-dependencies]
mirsem = { path = "../mirsem" }
